--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <article>
+    <section>
         Hi! I'm Gabriel and I'm happy to have you on my portfolio page.
         Why don't you stick around and take a look at my projects?
-    </article>
+    </section>
 </body>
 
 </html>
