Updated index and removed cv

--- a/index.html
+++ b/index.html
@@ -9,9 +9,65 @@
 </head>
 
 <body>
+    Curriculum Vitae
+
     <section>
+        Gabriel (Gabe) Walton
+        Application Developer
+        Website: gabewalt.me
+        Phone: 0161-743-1111
+        Twitter: @gabewalt
+    </section>
+
+    <article>
         Hi! I'm Gabriel and I'm happy to have you on my portfolio page.
         Why don't you stick around and take a look at my projects?
+    </article>
+
+    <section>
+        Services
+        Development
+        Code Optimisations
+        Bug Fixes
+    </section>
+
+    <section>
+        Skills
+        HTML
+        CSS
+        JavaScript
+    </section>
+
+    <section>
+        Work History
+        Application Developer
+        XYZ Corp
+        5 years
+        
+        HR Systems Developer
+        ABC Corp
+        3 years
+        
+        Cat Wrangler
+        123 Inc.
+        2 years
+    </section>
+
+    <section>
+        Portfolio
+    </section>
+
+    <section>
+        Testimonials
+        I love Gabriel's work!
+        Gabriel's work helped us greatly.
+    </section>
+
+    <section>
+        Mailing Address
+        123 Some St,
+        Somewhere,
+        Salford M6
     </section>
 </body>
 
