--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 
     <section>
         Services
-        Development
+        Front-end Development
         Code Optimisations
         Bug Fixes
+        Software Quality Checking
     </section>
 
     <section>
@@ -40,17 +41,17 @@
 
     <section>
         Work History
+        Software Quality Team (secondment)
+        Paragon Customer Communications
+        6 months
+
         Application Developer
-        XYZ Corp
-        5 years
+        Paragon Customer Communications
+        6 years
         
         HR Systems Developer
-        ABC Corp
+        Marks and Spencer
         3 years
-        
-        Cat Wrangler
-        123 Inc.
-        2 years
     </section>
 
     <section>
