--- a/index.html
+++ b/index.html
@@ -3,73 +3,121 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>
-        Gabriel Walton | Developer
-    </title>
+    <title>Gabriel Walton | Developer</title>
 </head>
 
 <body>
-    Portfolio
+    <main>
 
-    <section>
-        Gabriel (Gabe) Walton
-        Application Developer
-        Website: gabewalt.me
-        Phone: 0161-743-1111
-        Twitter: @gabewalt
-    </section>
+        <h1>Portfolio</h1>
 
-    <article>
-        Hi! I'm Gabriel and I'm happy to have you on my portfolio page.
-        Why don't you stick around and take a look at my projects?
-    </article>
+        <section>
+            <h2>Gabriel (Gabe) Walton</h2>
+            <p>
+                Application Developer
+            </p>
+            <dl>
+                <dt>Website</dt>
+                <dd>devbygabe.me</dd>
+                <dt>Twitter</dt>
+                <dd>@gabewalt</dd>
+            </dl>
+        </section>
 
-    <section>
-        Services
-        Front-end Development
-        Code Optimisations
-        Bug Fixes
-        Software Quality Checking
-    </section>
+        <article>
+            <header>
+                <h2>About Me</h2>
+            </header>
+            <p>
+                Hi! I'm Gabriel and I'm <em>happy</em> to have you on my portfolio page.
+                Why don't you stick around and take a look at my projects?
+            </p>
+            <footer>
+                Contact me
+                <!-- TODO: add form -->
+            </footer>
+        </article>
 
-    <section>
-        Skills
-        HTML
-        CSS
-        JavaScript
-    </section>
+        <section>
+            <h2>Services</h2>
+            <ul>
+                <li>Front-end Development</li>
+                <li>Code Optimisations</li>
+                <li>Bug Fixes</li>
+                <li>Software Quality Checking</li>
+            </ul>
+        </section>
 
-    <section>
-        Work History
-        Software Quality Team (secondment)
-        Paragon Customer Communications
-        6 months
+        <section>
+            <h2>Skills</h2>
+            <ul>
+                <li>HMTL</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+        </section>
 
-        Application Developer
-        Paragon Customer Communications
-        6 years
-        
-        HR Systems Developer
-        Marks and Spencer
-        3 years
-    </section>
+        <section>
+            <h2>Work History</h2>
+            <table>
+                <thead>
+                    <th>Role</th>
+                    <th>Company</th>
+                    <th>Years</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>QA Team (secondment)</td>
+                        <td>Paragon CC</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>Print Developer</td>
+                        <td>Paragon CC</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>HR Systems Analyst</td>
+                        <td>Marks &amp; Spencer</td>
+                        <td>3</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="2">Total </td>
+                        <td>9</td>
+                    </tr>
+                </tfoot>
+            </table>
+        </section>
 
-    <section>
-        Portfolio
-    </section>
+        <section>
+            <!-- TODO: add images -->
+            <h2>Projects</h2>
+        </section>
 
-    <section>
-        Testimonials
-        I love Gabriel's work!
-        Gabriel's work helped us greatly.
-    </section>
+        <section>
+            <h2>Testimonials</h2>
+            <blockquote>
+                <p>I <strong>love</strong> Gabriel's work!</p>
+            </blockquote>
+            <p>- Customer #1</p>
+            <blockquote>
+                <p>Gabriel's work <strong>helped</strong> us greatly.</p>
+            </blockquote>
+            <p>- Customer #2</p>
+        </section>
 
-    <section>
-        Mailing Address
-        123 Some St,
-        Somewhere,
-        Salford M6
-    </section>
+        <section>
+            <h2>Mailing Address</h2>
+            <address>
+                Some St,<br>
+                Somewhere,<br>
+                Salford M6
+            </address>
+        </section>
+
+    </main>
 </body>
 
 </html>
