--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#work-history">Work History</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#mailing-address">Mailing Address</a></li>
+        </ul>
+    </nav>
     <main>
-
         <h1>Portfolio</h1>
 
         <section>
@@ -20,16 +29,17 @@
                 <dt>Website</dt>
                 <dd>devbygabe.me</dd>
                 <dt>Twitter</dt>
-                <dd>@gabewalt</dd>
+                <dd><a href="https://www.twitter.com" target="_blank">@gabewalt</a></dd>
             </dl>
         </section>
 
-        <article>
+        <article id="about-me">
             <header>
                 <h2>About Me</h2>
             </header>
             <p>
-                Hi! I'm Gabriel and I'm <em>happy</em> to have you on my portfolio page.
+                Hi! I'm Gabriel. I'm a Manchester based developer. 
+                I'm <em>happy</em> to have you on my portfolio page.
                 Why don't you stick around and take a look at my projects?
             </p>
             <footer>
@@ -38,26 +48,27 @@
             </footer>
         </article>
 
-        <section>
+        <section id="services">
             <h2>Services</h2>
             <ul>
                 <li>Front-end Development</li>
                 <li>Code Optimisations</li>
                 <li>Bug Fixes</li>
-                <li>Software Quality Checking</li>
+                <li>Web Design</li>
             </ul>
         </section>
 
-        <section>
+        <section id="skills">
             <h2>Skills</h2>
             <ul>
                 <li>HMTL</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
+                <li>Figma</li>
             </ul>
         </section>
 
-        <section>
+        <section id="work-history">
             <h2>Work History</h2>
             <table>
                 <thead>
@@ -91,12 +102,12 @@
             </table>
         </section>
 
-        <section>
+        <section id="projects">
             <!-- TODO: add images -->
             <h2>Projects</h2>
         </section>
 
-        <section>
+        <section id="testimonials">
             <h2>Testimonials</h2>
             <blockquote>
                 <p>I <strong>love</strong> Gabriel's work!</p>
@@ -108,7 +119,7 @@
             <p>- Customer #2</p>
         </section>
 
-        <section>
+        <section id="mailing-address">
             <h2>Mailing Address</h2>
             <address>
                 Some St,<br>
