--- a/index.html
+++ b/index.html
@@ -35,16 +35,14 @@
         </dl>
       </section>
 
-      <article id="about-me">
-        <header>
-          <h2>About Me</h2>
-        </header>
+      <section id="about-me">
+        <h2>About Me</h2>
         <p>
           Hi! I'm Gabriel. I'm a Manchester based developer. I'm
           <em>happy</em> to have you on my portfolio page. Why don't you stick
           around and take a look at my projects?
         </p>
-      </article>
+      </section>
 
       <section id="services">
         <h2>Services</h2>
